--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,72 @@
 /*font-family: 'Eczar', serif;
 font-family: 'Work Sans', sans-serif;*/
 
-#contenidos{
-	width: 1000px;
-	height: auto;
+#contenidos{									/* */
+	width: 1000px;								/* tamaño */
+	height: auto;								/* alto */
 	margin: auto;
 	position: relative;
 	background: LightBlue;
 }
 
-body{
-	background-image: url(../img/unad1.jpg);
+/* Etiquetas	*/
+
+body{											/* imagen de fondo	*/
+	background-image: url(../img/unad2.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 
-h1{
-	font-family: 'Eczar', serif;
-	margin-left: 10px;
-	font-size: 60px
-	text-align: center;
+h1{												/* título primario	*/
+	font-family: 'Eczar', serif;				/* tipo de letra */
+	margin-left: 10px;							/* márgenes */
+	margin-bottom: 1px;
+	font-size: 50px;							/* tamaño */	
+	text-align: center;							/* alineación */
 }
 
 h2{
 	font-family: 'Work Sans', sans-serif;
 	margin-left: 10px;
-	font-size: 20px
+	margin-top: 1px;
+	font-size: 20px;
 	text-align: left;
 }
+
+header{								/* encabezado */
+	width: 1000px;
+	height: 200px;
+	background: #F2B80D;
+}
+
+nav{								/* menú de navegación */
+	width: 1000px;
+	height: 60px;
+	background: #B3B3B3;
+}
+
+ul{									/* espacio de las listas del nav */
+	margin: auto;
+	padding-top: 4px;
+}
+
+li{									/* listas de enlaces del nav */
+	float: left;
+	list-style-type: none;
+	padding: 10px;
+	/* background: #333333;
+	margin: 3px;
+	border-radius: 10px; */
+}
+
+/* Clases */
+
+.ancho_menu_home{width: 900px;} 			/* seleccionada desde las listas de enlaces*/
+.ancho_menu_paginas{width: 900px;} 
+
+/* características de las listas de enlaces*/
+
+.menu:link{color: white; text-decoration: none;} 		/* propias */
+.menu:visited{color: white; text-decoration: none;} 	/* cuando han sido usadas */
+.menu:hover{color: black; text-decoration: none;} 		/* cuando se pasa el cursor sobre ellas */
+.menu:active{color: red; text-decoration: none;} 		/* cuando se les pincha */
