--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 /*font-family: 'Eczar', serif;
 font-family: 'Work Sans', sans-serif;*/
+*{
+  margin: 0;
+  padding: 0;
+}
+
 
 #contenidos{			/* */
 	width: 980px;		/* ancho */
@@ -7,23 +12,23 @@ font-family: 'Work Sans', sans-serif;*/
 	margin: 15px auto;
 	text-align: left;
 	position: relative;
+    border-radius: 10px;
 }
 
 /* Etiquetas	*/
 
-body{											/* imagen de fondo	*/
+body{											
 	text-align: center;
 	background:#006680;
 }
 
-h1{			/* título primario	*/
-	font-family: 'Eczar', serif;				/* tipo de letra */
-	/*margin-top: 10px;	*/						/* margen superior */
-	/*margin-bottom: 1px;*/						/* margen inferior */
-	font-size: 50px;							/* tamaño */	
-	text-align: center;							/* alineación */
-	line-height: 50px;							/* interlineado */
-	padding-top: 20px;							/* anchura de zona de relleno */
+h1{		
+	font-family: 'Eczar', serif;
+    color: red;
+	font-size: 50px;								
+	text-align: center;							
+	line-height: 50px;/* interlineado */
+	margin: 1px;/* anchura de zona de relleno */
 }
 
 h2{
@@ -34,70 +39,151 @@ h2{
 	text-align: left;
 }
 
-header, section, footer, aside, nav, article, figure, figcaption,
+header, section, footer, aside, article, figure, figcaption,
 hgroup{
 	display: block;
 }
 
 header{								/* encabezado */
 	background: #F2B80D;			/* color de fondo */
-	border-radius: 10px;			/* bordes redondeados */
+	border-radius: 10px 10px 0px 0px;/* bordes redondeados */
 	padding: 20px;
+    margin: 1px;
 }
 
 nav{								/* menú de navegación */
 	height: 50px;
 	background: #808080;
-	border-radius: 10px;
-	margin-top: 10px;
+	border-radius: 0px 0px 10px 10px;
+	margin-top: 0px;
 	padding: 5px 15px;
+    left: 0;
+    right: 0;
 }
 
-ul{									/* espacio de las listas del nav */
-	margin: auto;
+nav ul{		
+	margin: left;
 	padding-top: 4px;
-
+    list-style: none;
+    position: absolute;
 }
 
-li{									/* listas de enlaces del nav */
-	float: left;
-	list-style-type: none;			/* acomodar horizontal */
-	padding: 10px;
-	font-family: 'Work Sans', sans-serif;
-	/* background: #333333;
-	margin: 3px;
-	border-radius: 10px; */	
+nav > ul {
+    display: table;
+    width: 50%;
+    position: relative;
 }
 
-section{
-	float: left;
+nav > ul li {
+    display: table-cell;
+    background: #808080;
+}
+
+nav > ul > li:hover > ul {
+	display:block;
+	height:100%;
+}
+
+nav > ul > li > ul {
+	display:block;
+	position:absolute;
+	height:0%;
+    padding-top: 16px;
+    -webkit-transition: all .3s ease;
+	-moz-transition: all .3s ease;
+	-ms-transition: all .3s ease;
+	-o-transition: all .3s ease;
+	transition: all .3s ease;
+}
+
+nav > ul > li > ul > li {
+	display:block;
+	position:relative;
+    left: 35px;
+	overflow:hidden;
+	height:100%;
+    width: 120%;
+}
+
+nav > ul li a {
+	display:block;
+	line-height:20px;
+	padding:4px;
+	position: relative;
+	text-align:center;
+	text-decoration:none;
+    -webkit-transition: all .3s ease;
+	-moz-transition: all .3s ease;
+	-ms-transition: all .3s ease;
+	-o-transition: all .3s ease;
+	transition: all .3s ease;
+}
+ 
+nav > ul > li > a span .icon {
+	line-height:10px;
+    padding: 10px;
+    color: black;
+}
+
+section{	
+    float: left;
 	width: 660px;
-	margin: 20px;
-	background: #CCCCCC;
+	margin: 20px 0px;
+	background: red;
+    border-radius: 10px;
 }
 
 aside{
 	float: left;
-	width: 220px;
-	margin: 20px 0px;
+	width: 260px;
+	margin: 20px 0px 0px 20px;
 	padding: 20px;
 	background: #CCCCCC;
+    border-radius: 10px;
 }
 
 footer{
 	clear: both;
+    margin: auto;
 	text-align: center;
-	padding: 20px;
+	padding: 25px;
 	border-top: 2px solid #999999;
+    position: relative;
 }
 
 article{
 	background: #FFFBCC;
-	border: 1px solid #999999;
 	padding: 20px;
-	margin-bottom: 15px;
+	margin: 15px;
 }
 
+blockquote{
+    padding: 0px;
+    margin: 5px 0px 0px 0px;
+    color: green;
+}
+span{
+    color: yellowgreen;
+    font-size: 22px;
+}
+
+#parrafo{
+    font-size: 15px;
+    color: darkmagenta;
+    background: yellow;
+}
+
+.pie{
+    font-size: 22px;
+    margin: 38px;
+}
+
+small{
+    color: black;
+    display: block;
+    font-size: 20px;
+    margin-top: 25px;
+}
 
 /* Clases */
 
